frontend/src/inputStyles.css
a {
    color: white;
}

button {
    background-color: white;
    color: black;
    border: none;
    border-radius: 2rem;
    font-size: 1.2rem;
    font-weight: bold;

    user-select: none;

    min-width: 3rem;
    min-height: 3rem;

    padding: 0.5rem;
    

    &.active {
        
        /* background-color: rgba(7, 8, 43, 0.658); */
        box-shadow: 0px 0px 15px 10px rgba(58, 171, 190, 0.596);
    }

    &[disabled] {
        color: gray;
    }

    &:hover:not([disabled]) {
        box-shadow: 0px 0px 10px 10px rgba(58, 170, 190, 0.438);
        cursor: pointer;
    }
        
}

input[type="checkbox"] {
    accent-color: white;
    width: 1.2rem;
    height: 1.2rem;
    margin-right: 0.5rem;
    vertical-align: bottom;
}

input[type="text"], input[type="password"], input[type="email"] {
    box-sizing: border-box;

    width: 100%;
    height: 3rem;

    padding: 1rem;

    border-radius: 2rem;
    border: 1px solid white;

    font-size: 1.2rem;
    background-color: transparent;
    color: white;

}

select {
    box-sizing: border-box;

    width: 100%;
    height: 4rem;

    padding: 1rem;

    border-radius: 2rem;
    border: 1px solid white;

    font-size: 1.2rem;
    background-color: transparent;
    color: white;

    option {
        background-color: black;
    }
}

div.input-with-custom-icon {
    position: relative;

    & input {
        padding-left: 3rem;  /* for the icons */
    }

    & > .icon {
        position: absolute;
        left: 1rem;
        top: 50%;
        transform: translateY(-50%);
    }
}

